--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,21 @@
         android:theme="@style/Theme.FitnessCoach"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.RegistroActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".activities.InicioActivity"
+            android:exported="false">
         </activity>
     </application>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
