--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessCoach"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main" />
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true">
@@ -21,22 +27,17 @@
         </activity>
         <activity
             android:name=".activities.RegistroActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".activities.InicioActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".activities.EjerciciosAdapter"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".activities.Recycler"
-            android:exported="false">
-        </activity>
-        <activity android:name=".activities.RecyclerFragment"/>
-
+            android:exported="false"></activity>
+        <activity android:name=".activities.RecyclerFragment" />
     </application>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
 </manifest>
