--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:name=".activities.Recycler"
             android:exported="false"></activity>
         <activity
-            android:name=".activities.Camera"
+            android:name=".activities.CameraActivity"
             android:exported="false"></activity>
         <activity android:name=".activities.RecyclerFragment" />
         <service
